## Process this file with automake to produce Makefile.in

# Lugar de instalación de la documentación
bmonkey_docdir = ${prefix}/doc/bmonkey
bmonkey_doc_DATA = \
	bmonkey-configuration-file-format.txt

EXTRA_DIST = \
	$(bmonkey_doc_DATA)

# Limpieza de ficheros con "make maintainerclean"
MAINTAINERCLEANFILES = \
	Makefile \
	Makefile.in
