## File created by the gnome-build tools

# Fuentes por defecto
fontsdir = $(datadir)/bmonkey/fonts
fonts_DATA = \
	FreeSans.ttf \
	README	

# Incluimos las fuentes en la distribución
EXTRA_DIST = \
	$(fonts_DATA)

# Limpieza de ficheros con "make maintainerclean"
MAINTAINERCLEANFILES = \
	Makefile \
	Makefile.in

