## File created by the gnome-build tools

# Lugar de instalación del theme
default_themedir = $(datadir)/bmonkey/themes/default
default_theme_DATA = \
	theme.xml

# Incluimos los ficheros del theme en la distribución
EXTRA_DIST = \
	$(default_theme_DATA)

# Limpieza de ficheros con "make maintainerclean"
MAINTAINERCLEANFILES = \
	Makefile \
	Makefile.in
